RTE_INTEGRATION update
